--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   gap: ^3.0.1
   fpdart: ^1.1.0
   google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  flutter_spinkit: ^5.2.1
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
