--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_spinkit: ^5.2.1
   icons_plus: ^5.0.0
   animated_bottom_navigation_bar: ^1.3.3
+  shared_preferences: ^2.2.3
+  top_snackbar_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
