--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   icons_plus: ^5.0.0
   animated_bottom_navigation_bar: ^1.3.3
   shared_preferences: ^2.2.3
-  top_snackbar_flutter: ^3.1.0
+  flutter_html: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
