--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   gap: ^3.0.1
   fpdart: ^1.1.0
   google_fonts: ^6.2.1
+  flutter_staggered_grid_view: ^0.7.0
+  persistent_header_adaptive: ^2.1.0
+  cached_network_image: ^3.3.1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -54,3 +58,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/json/
