--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   persistent_header_adaptive: ^2.1.0
   cached_network_image: ^3.3.1
   flutter_animate: ^4.5.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
