--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A assignment project for weDevs."
 
 publish_to: "none"
 
-version: 1.0.0+1
+version: 1.1.1+1
 
 environment:
   sdk: ">=3.3.4 <4.0.0"
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_animate: ^4.5.0
   intl: ^0.19.0
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
