--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_animate: ^4.5.0
   intl: ^0.19.0
   flutter_native_splash: ^2.4.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
